// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`golden examples > accumulator > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 0,
                    "index": 1,
                    "name": "__t1",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 3,
        "name": "constant-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t3",
              "type": "virtual",
            },
          },
        },
        "entity_number": 4,
        "name": "arithmetic-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 5,
        "name": "constant-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "accumulator",
    "wires": [
      [
        1,
        2,
        2,
        2,
      ],
      [
        4,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        4,
        2,
      ],
      [
        3,
        2,
        4,
        2,
      ],
      [
        2,
        4,
        5,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > adder > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t1",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t3",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t2",
              "type": "virtual",
            },
          },
        },
        "entity_number": 3,
        "name": "arithmetic-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 4,
        "name": "constant-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "adder",
    "wires": [
      [
        1,
        2,
        3,
        2,
      ],
      [
        2,
        2,
        3,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > clamp > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 0,
                    "index": 1,
                    "name": "__t2",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "decider-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 5,
        "name": "decider-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t6",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t2",
              "type": "virtual",
            },
          },
        },
        "entity_number": 6,
        "name": "arithmetic-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 100,
                    "index": 1,
                    "name": "__t7",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 7,
        "name": "constant-combinator",
        "position": {
          "x": 12,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 8,
        "name": "decider-combinator",
        "position": {
          "x": 14,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 9,
        "name": "decider-combinator",
        "position": {
          "x": 16,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t8",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 10,
        "name": "decider-combinator",
        "position": {
          "x": 18,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t10",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t2",
              "type": "virtual",
            },
          },
        },
        "entity_number": 11,
        "name": "arithmetic-combinator",
        "position": {
          "x": 20,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t10",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t10",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 12,
        "name": "decider-combinator",
        "position": {
          "x": 22,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t10",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 13,
        "name": "decider-combinator",
        "position": {
          "x": 24,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t10",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t11",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t1",
              "type": "virtual",
            },
          },
        },
        "entity_number": 14,
        "name": "arithmetic-combinator",
        "position": {
          "x": 26,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 15,
        "name": "decider-combinator",
        "position": {
          "x": 28,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t11",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 16,
        "name": "decider-combinator",
        "position": {
          "x": 30,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t6",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t12",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t11",
              "type": "virtual",
            },
          },
        },
        "entity_number": 17,
        "name": "arithmetic-combinator",
        "position": {
          "x": 32,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 18,
        "name": "constant-combinator",
        "position": {
          "x": 34,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "clamp",
    "wires": [
      [
        1,
        2,
        3,
        2,
      ],
      [
        2,
        2,
        3,
        2,
      ],
      [
        3,
        4,
        4,
        2,
      ],
      [
        2,
        2,
        4,
        2,
      ],
      [
        3,
        4,
        5,
        2,
      ],
      [
        2,
        2,
        5,
        2,
      ],
      [
        4,
        4,
        6,
        2,
      ],
      [
        5,
        4,
        6,
        2,
      ],
      [
        1,
        2,
        8,
        2,
      ],
      [
        7,
        2,
        8,
        2,
      ],
      [
        8,
        4,
        9,
        2,
      ],
      [
        7,
        2,
        9,
        2,
      ],
      [
        8,
        4,
        10,
        2,
      ],
      [
        2,
        2,
        10,
        2,
      ],
      [
        9,
        4,
        11,
        2,
      ],
      [
        10,
        4,
        11,
        2,
      ],
      [
        11,
        4,
        12,
        2,
      ],
      [
        11,
        4,
        12,
        2,
      ],
      [
        11,
        4,
        13,
        2,
      ],
      [
        1,
        2,
        13,
        2,
      ],
      [
        12,
        4,
        14,
        2,
      ],
      [
        13,
        4,
        14,
        2,
      ],
      [
        6,
        4,
        15,
        2,
      ],
      [
        6,
        4,
        15,
        2,
      ],
      [
        6,
        4,
        16,
        2,
      ],
      [
        14,
        4,
        16,
        2,
      ],
      [
        15,
        4,
        17,
        2,
      ],
      [
        16,
        4,
        17,
        2,
      ],
      [
        17,
        4,
        18,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > comparison-chain > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 3,
        "name": "constant-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "decider-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "<",
                "first_signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 5,
        "name": "decider-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 0,
                    "index": 1,
                    "name": "__t6",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 6,
        "name": "constant-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 7,
        "name": "decider-combinator",
        "position": {
          "x": 12,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t6",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 8,
        "name": "decider-combinator",
        "position": {
          "x": 14,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t5",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t6",
              "type": "virtual",
            },
          },
        },
        "entity_number": 9,
        "name": "arithmetic-combinator",
        "position": {
          "x": 16,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 10,
        "name": "constant-combinator",
        "position": {
          "x": 18,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "comparison-chain",
    "wires": [
      [
        1,
        2,
        4,
        2,
      ],
      [
        2,
        2,
        4,
        2,
      ],
      [
        2,
        2,
        5,
        2,
      ],
      [
        3,
        2,
        5,
        2,
      ],
      [
        4,
        4,
        7,
        2,
      ],
      [
        5,
        4,
        7,
        2,
      ],
      [
        4,
        4,
        8,
        2,
      ],
      [
        6,
        2,
        8,
        2,
      ],
      [
        7,
        4,
        9,
        2,
      ],
      [
        8,
        4,
        9,
        2,
      ],
      [
        9,
        4,
        10,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > conditional-counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 0,
                    "index": 1,
                    "name": "__t1",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 3,
        "name": "constant-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t4",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "constant-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t5",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t4",
              "type": "virtual",
            },
          },
        },
        "entity_number": 5,
        "name": "arithmetic-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "-",
            "output_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t4",
              "type": "virtual",
            },
          },
        },
        "entity_number": 6,
        "name": "arithmetic-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 7,
        "name": "decider-combinator",
        "position": {
          "x": 12,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 8,
        "name": "decider-combinator",
        "position": {
          "x": 14,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t5",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t7",
              "type": "virtual",
            },
          },
        },
        "entity_number": 9,
        "name": "arithmetic-combinator",
        "position": {
          "x": 16,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 10,
        "name": "constant-combinator",
        "position": {
          "x": 18,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "conditional-counter",
    "wires": [
      [
        1,
        2,
        2,
        2,
      ],
      [
        9,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        5,
        2,
      ],
      [
        4,
        2,
        5,
        2,
      ],
      [
        2,
        4,
        6,
        2,
      ],
      [
        4,
        2,
        6,
        2,
      ],
      [
        3,
        2,
        7,
        2,
      ],
      [
        5,
        4,
        7,
        2,
      ],
      [
        3,
        2,
        8,
        2,
      ],
      [
        6,
        4,
        8,
        2,
      ],
      [
        7,
        4,
        9,
        2,
      ],
      [
        8,
        4,
        9,
        2,
      ],
      [
        2,
        4,
        10,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > counter > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 0,
                    "index": 1,
                    "name": "__t1",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "second_constant": 0,
          },
        },
        "entity_number": 2,
        "name": "arithmetic-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 1,
                    "index": 1,
                    "name": "__t3",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 3,
        "name": "constant-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t4",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t3",
              "type": "virtual",
            },
          },
        },
        "entity_number": 4,
        "name": "arithmetic-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 5,
        "name": "constant-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "counter",
    "wires": [
      [
        1,
        2,
        2,
        2,
      ],
      [
        4,
        4,
        2,
        2,
      ],
      [
        2,
        4,
        4,
        2,
      ],
      [
        3,
        2,
        4,
        2,
      ],
      [
        2,
        4,
        5,
        2,
      ],
    ],
  },
}
`;

exports[`golden examples > mux > compiles to a blueprint JSON plan matching its golden snapshot 1`] = `
{
  "blueprint": {
    "entities": [
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 1,
        "name": "constant-combinator",
        "position": {
          "x": 0,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 2,
        "name": "constant-combinator",
        "position": {
          "x": 2,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 3,
        "name": "constant-combinator",
        "position": {
          "x": 4,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [
              {
                "filters": [
                  {
                    "count": 0,
                    "index": 1,
                    "name": "__t4",
                    "type": "virtual",
                  },
                ],
                "index": 1,
              },
            ],
          },
        },
        "entity_number": 4,
        "name": "constant-combinator",
        "position": {
          "x": 6,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": ">",
                "first_signal": {
                  "name": "__t1",
                  "type": "virtual",
                },
                "second_signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "constant": 1,
                "signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 5,
        "name": "decider-combinator",
        "position": {
          "x": 8,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t2",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 6,
        "name": "decider-combinator",
        "position": {
          "x": 10,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t5",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t4",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 7,
        "name": "decider-combinator",
        "position": {
          "x": 12,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t2",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t4",
              "type": "virtual",
            },
          },
        },
        "entity_number": 8,
        "name": "arithmetic-combinator",
        "position": {
          "x": 14,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "≠",
                "constant": 0,
                "first_signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 9,
        "name": "decider-combinator",
        "position": {
          "x": 16,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "decider_conditions": {
            "conditions": [
              {
                "comparator": "=",
                "constant": 0,
                "first_signal": {
                  "name": "__t7",
                  "type": "virtual",
                },
              },
            ],
            "outputs": [
              {
                "copy_count_from_input": true,
                "signal": {
                  "name": "__t3",
                  "type": "virtual",
                },
              },
            ],
          },
        },
        "entity_number": 10,
        "name": "decider-combinator",
        "position": {
          "x": 18,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "arithmetic_conditions": {
            "first_signal": {
              "name": "__t7",
              "type": "virtual",
            },
            "operation": "+",
            "output_signal": {
              "name": "__t8",
              "type": "virtual",
            },
            "second_signal": {
              "name": "__t3",
              "type": "virtual",
            },
          },
        },
        "entity_number": 11,
        "name": "arithmetic-combinator",
        "position": {
          "x": 20,
          "y": 0,
        },
      },
      {
        "control_behavior": {
          "sections": {
            "sections": [],
          },
        },
        "entity_number": 12,
        "name": "constant-combinator",
        "position": {
          "x": 22,
          "y": 0,
        },
      },
    ],
    "icons": [],
    "item": "blueprint",
    "label": "mux",
    "wires": [
      [
        1,
        2,
        5,
        2,
      ],
      [
        4,
        2,
        5,
        2,
      ],
      [
        5,
        4,
        6,
        2,
      ],
      [
        2,
        2,
        6,
        2,
      ],
      [
        5,
        4,
        7,
        2,
      ],
      [
        4,
        2,
        7,
        2,
      ],
      [
        6,
        4,
        8,
        2,
      ],
      [
        7,
        4,
        8,
        2,
      ],
      [
        8,
        4,
        9,
        2,
      ],
      [
        8,
        4,
        9,
        2,
      ],
      [
        8,
        4,
        10,
        2,
      ],
      [
        3,
        2,
        10,
        2,
      ],
      [
        9,
        4,
        11,
        2,
      ],
      [
        10,
        4,
        11,
        2,
      ],
      [
        11,
        4,
        12,
        2,
      ],
    ],
  },
}
`;
